--- a/Inclusion/index.html
+++ b/Inclusion/index.html
@@ -143,11 +143,11 @@ You can edit the instructions text. The prompt to try and form an impression of 
 
 */ 
 -->  <h3>Interazione di gruppo</h3>
-  Non appena verrai conness* al social network, dovresti poter vedere i profili degli altri partecipanti. <br>
-  Potrai leggere e mettere dei <i>like</i> ai profili degli altri partecipanti, <br>
-  cliccando il pulsante <i>"like"</i> simile a quello di altri social network, come ad esempio Facebook <br> 
+  Non appena verrai conness* al social network vedrai i profili degli altri partecipanti. <br>
+  Potrai leggere e mettere dei <i>like</i> ai profili degli altri cliccando il pulsante <i>"like"</i><br>
+  simile a quello di altri social network, come ad esempio Facebook. <br> 
   <br>
-  Anche l'interazione è minima <b>cerca di crearti un'impressione delle altre persone nel gruppo.</b> <br>
+  Anche se l'interazione è minima <b>cerca di crearti un'impressione delle altre persone nel gruppo.</b> <br>
   Prova ad immaginarle nella loro vita reale, immagina che tipo di persone sono e <br>
   se andresti d'accordo con loro nella vita reale. <br>
   <br><br>L'interazione durerà solo due minuti e mezzo, per questo è importante <br> 
